--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,23 +1,23 @@
 <html>
 <head>
     <title>CaroH - Online caro game</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/login-style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
     
     <%- include('style') -%>
     
 </head>
 <body>
-    <form action="login" method="post">
+    <form action="home" method="post">
         <h1>GAME LOGIN</h1>
         <div class="container">
             <label for="username"><b>Username</b></label>
             <input type="text" placeholder="Enter Username" name="username" required>
             <label for="password"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password" required>
-            <input type="text" name="isWebapp" value="1" style="visibility: hidden;" required>
+            <input type="password" placeholder="Enter Password" name="password" required>            
             <button type="submit">Login</button>            
+            <h3 style="text-align: center;">OR</h3>            
+            <button onclick="window.location='/signup-web';">Sign up</button>
         </div>
-    </form>
+    </form>    
 </body>
 </html>
