--- a/views/style.ejs
+++ b/views/style.ejs
@@ -53,11 +53,17 @@ span.psw {
 }
 
 /* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 900px) {
   span.psw {
      display: block;
      float: none;
   }
-  
+  form{
+    width: 90vw;
+    font-size: 150%;    
+  }
+  input, button{
+    font-size: 150%;
+  }
 }
 </style>
