--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -18,7 +18,7 @@
             <input type="password" placeholder="Confirm Password" name="cpassword" required>
             <label for="email"><b>Email</b></label>
             <input type="text" placeholder="Enter Email" name="email">      
-            <input type="text" placeholder="Number of avt" name="avt" required>
+            <input type="text" placeholder="Number of avt (1-50)" name="avt" required>
             <button type="submit">Sign up</button>
         </div>
     </form>    
