--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,17 +7,28 @@
     
 </head>
 <body>
-    <form action="home" method="post">
-        <h1>GAME LOGIN</h1>
-        <div class="container">
-            <label for="username"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="username" required>
-            <label for="password"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password" required>            
-            <button type="submit">Login</button>            
-            <h3 style="text-align: center;">OR</h3>            
-            <button onclick="window.location='/signup-web';">Sign up</button>
-        </div>
-    </form>    
+    <img src="avatar/50.png" alt="CAROH" class="game_img" width="200">
+    <div class="form_login">
+        <form action="home" method="post">
+            <h1 class="game">CAROH</h1>
+            <h1>GAME LOGIN</h1>
+            <div class="container">
+                <label for="username"><b>Username</b></label>
+                <input type="text" placeholder="Enter Username" name="username" required>
+                <label for="password"><b>Password</b></label>
+                <input type="password" placeholder="Enter Password" name="password" required>            
+                <button type="submit">Login</button>            
+                <h3 style="text-align: center;">OR</h3>            
+                <button onclick="window.location='/signup-web';">Sign up</button>
+                <br>
+            </div>
+        </form>    
+    </div>    
+    <div class="footer">
+        <br>
+        <h3>CaroH - Online caro game</h3>
+        <p>Developer by HungNguyen81</p>
+        <br>
+    </div>
 </body>
 </html>
