--- a/views/style.ejs
+++ b/views/style.ejs
@@ -9,7 +9,7 @@ body {
 form {
     border: 3px solid #f1f1f1;
     border-radius: 50px;
-    width: 40vw;
+    width: 60vw;
     background-color: white;    
     height: max-content;
     margin-left: auto;
@@ -18,8 +18,8 @@ form {
 }
 .form_login{
   position: relative;
-  left: 50vw;  
-  height: 60vh; width: 40vw;
+  left: 50%;  
+  height: 60vh; width: 60vw;
   background-color: transparent;
   transform: translate(-50%);
 }
@@ -54,7 +54,6 @@ button {
   background-color: #6db5ca;
   color: white;
   padding: 14px 20px;
-  margin: 8px 0;
   border: none;
   cursor: pointer;
   width: 100%;
@@ -94,8 +93,8 @@ span.psw {
      float: none;
   }
   form{
-    width: 75vw;
-    margin-left: -50%;
+    width: 76vw;
+    margin-left: -8vw;
     font-size: 110%;
   }
   input, button{
