--- a/views/style.ejs
+++ b/views/style.ejs
@@ -60,8 +60,29 @@ button {
   border-radius: 20px;
   font-size: 18;
 }
+.signup-button{
+  background-color: #6db5ca;
+  color: white;
+  padding: 14px;
+  position: relative;
+  display: inline-block;  
+  width: 96%;
+  border: none;
+  cursor: pointer;  
+  border-radius: 20px;
+  font-size: 18;
+  text-align: center;
+}
 
-button:hover {
+.prev, .next{
+  width: 20px;
+}
+
+input[type=text]:hover,input[type=password]:hover{
+  border: 1px solid #6db5ca;
+}
+
+button:hover, .signup-button:hover {
   opacity: 0.8;
 }
 
@@ -84,8 +105,44 @@ span.psw {
   left: 50%;
   transform: translate(-50%);
   margin-top: 20px;
+  width: 200px;
+}
+.game_avt{
+  width: 200px;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 2s; /* Firefox < 16 */
+      -ms-animation: fadein 2s; /* Internet Explorer */
+       -o-animation: fadein 2s; /* Opera < 12.1 */
+          animation: fadein 2s;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 900px) {
   span.psw {
@@ -94,11 +151,64 @@ span.psw {
   }
   form{
     width: 76vw;
-    margin-left: -8vw;
+    /* margin-left: -8vw; */
     font-size: 110%;
   }
-  input, button{
+  input, button, .signup-button{
     font-size: 150%;
+  }
+  .signup-button{
+    width: 90%;
+  }  
+}
+.avatar_chooser{
+  padding: 30px 10px;
+  position: relative;
+  margin-top: 5px;
+}
+.avatar_chooser .game_avt{
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+}
+.next, .prev{
+  position:absolute;   
+  font-size: 600%; 
+  color: #6db5ca;
+}
+.next:hover, .prev:hover{
+  color: #388197;
+  font-size: 650%;
+}
+.next{
+  right: 200px;    
+  top: 50%;
+  transform: translate(0, -50%);
+}
+.prev{
+  left: 200px;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+@media screen and (max-width: 900px){
+  .next, .prev{
+    position:absolute;   
+    font-size: 400%; 
+    color: #6db5ca;
+  }
+  .next:hover, .prev:hover{
+    color: #388197;
+    font-size: 450%;
+  }
+  .next{
+    right: 10px;    
+    top: 50%;
+    transform: translate(0, -50%);
+  }
+  .prev{
+    left: 10px;
+    top: 50%;
+    transform: translate(0, -50%);
   }
 }
 </style>
