--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -22,7 +22,7 @@
             <label for="email"><b>Email</b></label>
             <input type="text" placeholder="Enter Email" name="email">  
             <label for="avatar_chooser"><b>Choose Your Avatar</b></label>                
-            <div class="avatar_chooser" style="background:;">
+            <div class="avatar_chooser">
                 <a class="prev"><i class="fas fa-caret-left" onclick="prev_img()"></i></a>
                 <img class="game_avt" id="avt" alt="avt">
                 <a class="next"><i class="fas fa-caret-right" onclick="next_img()"></i></a>
