--- a/views/style.ejs
+++ b/views/style.ejs
@@ -151,7 +151,7 @@ span.psw {
   }
   form{
     width: 76vw;
-    /* margin-left: -8vw; */
+    margin-left: -8vw;
     font-size: 110%;
   }
   input, button, .signup-button{
