--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,6 +4,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     
     <%- include('style') -%>
+    <style>
+        @media screen and (max-width: 900px) {
+            span.psw {
+                display: block;
+                float: none;
+            }
+            form{
+                width: 76vw;
+                margin-left: -8vw;
+                font-size: 110%;
+            }
+            input, button, .signup-button{
+                font-size: 150%;
+            }
+            .signup-button{
+                width: 90%;
+        }  
+    }
+    </style>
     
 </head>
 <body>
