--- a/views/style.ejs
+++ b/views/style.ejs
@@ -109,6 +109,7 @@ span.psw {
 }
 .game_avt{
   width: 200px;
+  /* box-shadow: 5px 10px #000; */
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
      -moz-animation: fadein 2s; /* Firefox < 16 */
       -ms-animation: fadein 2s; /* Internet Explorer */
@@ -193,6 +194,12 @@ span.psw {
     left: 10px;
     top: 50%;
     transform: translate(0, -50%);
+  }
+  .game_avt{
+    width: 80px;
+  }
+  .game{
+    font-size: 50px;
   }
 }
 </style>
