--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <title>CaroH - Online caro game</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <!-- <link rel="stylesheet" href="/maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> -->
 <style>
