--- a/views/home-style.ejs
+++ b/views/home-style.ejs
@@ -82,11 +82,15 @@
     background-color: darkcyan;
     color: white;
     font-size: 18;
+    cursor: pointer;
     padding: 15px;    
     margin: 10px;
     border-radius: 25px;
     position: relative;
     top: 30px;    
+}
+#btnSend:hover{
+    opacity: 0.9;
 }
 .roomtext-div{
     text-align: center;
