--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -66,6 +66,7 @@
                 username = $("#avt1").attr('username');
                 avtid = $("#avt1").attr('avtid');
                 socket.disconnect();
+                socket.connect();
                 
                 socket.emit("createRoom", roomid, username, avtid);
                 socket.on("roomFull", (p2_username, p2_avtid) => {
