--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -65,6 +65,9 @@
                 $("#roomid").text(roomid);                
                 username = $("#avt1").attr('username');
                 avtid = $("#avt1").attr('avtid');
+                socket.off("roomFull");
+                socket.off("newMsg");
+                socket.off("memberLeft");
                 
                 socket.emit("createRoom", roomid, username, avtid);
                 socket.on("roomFull", (p2_username, p2_avtid) => {
@@ -84,7 +87,10 @@
                 roomid = $("#roomid-input").val();
                 username = $("#avt1").attr('username');
                 avtid = $("#avt1").attr('avtid');
-                socket.emit("joinRoom", roomid, username, avtid);
+                socket.off("roomFull");
+                socket.off("newMsg");
+                socket.off("memberLeft");
+                socket.emit("joinRoom", roomid, username, avtid);                
 
                 socket.on("roomFull", (p2_username, p2_avtid) => {
                     $("#avt2").attr("src", "avatar/" + ((p2_avtid < 10)? '0' + p2_avtid:p2_avtid) + '.png');
