--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -56,6 +56,7 @@
         <%-include('footer')-%>
         <script>            
             var roomid, username, avtid;
+            var isConnect = false;
             function createNewRoom(){
                 console.log('ok create room')
                 roomid = '';
@@ -68,9 +69,10 @@
                 socket.off("roomFull");
                 socket.off("newMsg");
                 socket.off("memberLeft");
-                socket.emit('disconnect');
+                if(isConnect) socket.emit('disconnect');
                 
                 socket.emit("createRoom", roomid, username, avtid);
+                isConnect = true;
                 socket.on("roomFull", (p2_username, p2_avtid) => {
                     $("#avt2").attr("src", "avatar/" + ((p2_avtid < 10)? '0' + p2_avtid:p2_avtid) + '.png');
                     $("#p2_username").text(p2_username);
@@ -91,8 +93,9 @@
                 socket.off("roomFull");
                 socket.off("newMsg");
                 socket.off("memberLeft");
-                socket.emit('disconnect');
+                if(isConnect) socket.emit('disconnect');
                 socket.emit("joinRoom", roomid, username, avtid);                
+                isConnect = true;
 
                 socket.on("roomFull", (p2_username, p2_avtid) => {
                     $("#avt2").attr("src", "avatar/" + ((p2_avtid < 10)? '0' + p2_avtid:p2_avtid) + '.png');
