--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -58,21 +58,20 @@
             var roomid, username, avtid;
             var isConnect = false;
             function createNewRoom(){
+                socket.emit("leaveRoom", roomid, username);
                 console.log('ok create room')
                 roomid = '';
                 for(let i = 0; i < 6; i++){
                     roomid += Math.floor(Math.random() * 10);                    
                 }                
-                $("#roomid").text(roomid);                
+                $("#roomid").text(roomid);                                
                 username = $("#avt1").attr('username');
                 avtid = $("#avt1").attr('avtid');
                 socket.off("roomFull");
                 socket.off("newMsg");
                 socket.off("memberLeft");
-                if(isConnect) socket.emit('disconnect');
-                
+
                 socket.emit("createRoom", roomid, username, avtid);
-                isConnect = true;
                 socket.on("roomFull", (p2_username, p2_avtid) => {
                     $("#avt2").attr("src", "avatar/" + ((p2_avtid < 10)? '0' + p2_avtid:p2_avtid) + '.png');
                     $("#p2_username").text(p2_username);
@@ -87,15 +86,16 @@
                 });
             }
             function joinARoom(){
+                socket.emit("leaveRoom", roomid, username);
+
                 roomid = $("#roomid-input").val();
                 username = $("#avt1").attr('username');
                 avtid = $("#avt1").attr('avtid');
                 socket.off("roomFull");
                 socket.off("newMsg");
                 socket.off("memberLeft");
-                if(isConnect) socket.emit('disconnect');
+                
                 socket.emit("joinRoom", roomid, username, avtid);                
-                isConnect = true;
 
                 socket.on("roomFull", (p2_username, p2_avtid) => {
                     $("#avt2").attr("src", "avatar/" + ((p2_avtid < 10)? '0' + p2_avtid:p2_avtid) + '.png');
