--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -30,25 +30,25 @@
                 </div>
                 <div class="fcontainer freverse room-div">
                     <div>
-                        <input type="text" id="roomid-input" placeholder="Nhập mã phòng">
+                        <input type="text" id="roomid-input" placeholder="Nhập ID phòng">
                     </div>
                     <div class="fcontainer btn-div">
                         <div><a id="createBtn" class="btn" onclick="createNewRoom()">Tạo Phòng</a></div>
-                        <div><a id="joinBtn" class="btn" onclick="joinARoom()">Vào Phòng</a><br><br></div>
-                        <div>
-                            <h3>Hướng dẫn sử dụng:</h3>
-                            <ol>
-                                <li> Người chơi 1 click vào nút "Tạo Phòng" và nhận được mã phòng là 6 kí tự màu xanh dương "Room ID: ..."</li>
-                                <li> Người chơi 2 bằng cách nào đó có được mã phòng do người chơi 1 tạo</li>
-                                <li> Người chơi 2 nhập mã phòng vào ô "Nhập mã phòng"</li>
-                                <li> Người chơi 2 click vào nút "Vào Phòng"</li>
-                                <li> Khi người chơi thấy avatar và username của người kia xuất hiện, 2 người đã được kết nối và có thể trò chuyện.</li>
-                            </ol>
-                        </div>
+                        <div><a id="joinBtn" class="btn" onclick="joinARoom()">Vào Phòng</a><br><br></div>                        
                     </div> 
                     <div class="roomtext-div">
-                        <p>Room ID: <span id="roomid" style="font-size: 50 ;color: blue;"></span></p>
-                    </div>                   
+                        <p>ID Phòng: <span id="roomid" style="font-size: 50 ;color: blue;"></span></p>
+                    </div>    
+                    <div>
+                        <h3>Hướng dẫn sử dụng:</h3>
+                        <ol style="font-size: 15;">
+                            <li> Người chơi 1 click vào nút "Tạo Phòng" và nhận được mã ID phòng là 6 kí tự màu xanh dương "ID Phòng: ..."</li>
+                            <li> Người chơi 2 bằng cách nào đó có được ID phòng do người chơi 1 tạo</li>
+                            <li> Người chơi 2 nhập ID phòng vào ô "Nhập ID phòng"</li>
+                            <li> Người chơi 2 click vào nút "Vào Phòng"</li>
+                            <li> Khi người chơi thấy avatar và username của người kia xuất hiện, 2 người đã được kết nối và có thể trò chuyện.</li>
+                        </ol>
+                    </div>               
                 </div>
             </div>
             <div class="msg-box">
